erDiagram
    %% ==========================================
    %% ENUMS
    %% ==========================================
    AttemptStatus {
        IN_PROGRESS IN_PROGRESS
        SUBMITTED SUBMITTED
        EXPIRED EXPIRED
        GRADING GRADING
    }

    %% ==========================================
    %% MODELS
    %% ==========================================
    QuizAttempt ||--o{ AttemptQuestion : "questions"
    QuizAttempt ||--o{ QuestionResponse : "responses"
    QuizAttempt ||--o{ QuizViolation : "records"
    QuizAttempt ||--o| AttemptStateSnapshot : "persists"

    QuizAttempt {
        String id PK "attemptId"
        String scheduleId "logical reference to assessment_db.QuizSchedule"
        String studentId "logical reference to profile_db.PROFILE_PERSON"
        AttemptStatus status
        Float score
        Boolean passed
        Int duration
        Int warningsCount "current warning count for proctoring"
        DateTime startedAt
        DateTime submittedAt
        DateTime expiresAt
        Boolean manualGradingRequired
        DateTime lastHeartbeat "WebSocket keep-alive connection audit"
        String clientIp "Auditing client IP address"
        String userAgent "Auditing client user agent"
        String gradingChecksum "Cryptographic hash to prevent tampering"
    }

    AttemptQuestion {
        String id PK
        String attemptId FK
        String questionId "logical reference to assessment_db.Question"
        String sectionId "logical reference to assessment_db.QuizSection"
        Int order
        Json optionsOrder "saved option sequences for client visualization"
        Json selectionReason
        DateTime createdAt
    }

    QuestionResponse {
        String id PK
        String attemptId FK
        String questionId "logical reference to assessment_db.Question"
        String idempotencyKey "unique key to prevent duplicate autosaves"
        Json selected "candidate response value"
        Float score
        Int duration
        DateTime savedAt
        String redisStreamOffset "Redis stream offset for high-load auditing"
        Int batchId "Identifies background write job batch"
    }

    QuizViolation {
        String id PK
        String attemptId FK
        String type "fullscreen_exit | visibility_hidden | window_blur | copy_attempt | paste_attempt | context_menu | network_loss | device_change"
        DateTime occurredAt
        Int count
        Text message
        DateTime createdAt
    }

    AttemptStateSnapshot {
        String attemptId PK "logical FK reference to QuizAttempt"
        Json answers "Record of questionId to AssessmentAnswerValue"
        Json markedForReview "Record of questionId to boolean"
        String currentQuestionId
        Int localVersion
        Int serverVersion
        DateTime lastSavedAt
        Boolean pendingSubmit
        DateTime updatedAt
    }
